--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javier Gómez</title>
+    <title>Mi Sitio Web</title>
+    <!-- Incluye los estilos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/style.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
-    
+    <!-- Barra de Navegación de Bootstrap con container-fluid -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navBar">
+        <!-- Utilizamos container-fluid para extender la barra de navegación al ancho completo -->
+        <div class="container-fluid">
+            <!-- Logo o nombre del sitio (opcional) -->
+            <a class="navbar-brand" href="#">Mi Sitio</a>
+
+            <!-- Botón para colapsar el menú en dispositivos móviles -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Enlaces del menú -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav w-100">
+                    <!-- Utilizamos la clase "flex-fill" para distribuir equitativamente los elementos del menú -->
+                    <li class="nav-item flex-fill">
+                        <a class="nav-link text-xxxl tamaño_letra" href="#">Home</a>
+                        <!-- Utilizamos la clase "text-xxl" para hacer el texto aún más grande -->
+                    </li>
+                    <li class="nav-item flex-fill">
+                        <a class="nav-link text-xxxl tamaño_letra" href="#">Acerca de Mí</a>
+                    </li>
+                    <li class="nav-item flex-fill">
+                        <a class="nav-link text-xxxl tamaño_letra" href="#">Portafolio</a>
+                    </li>
+                    <li class="nav-item flex-fill">
+                        <a class="nav-link text-xxxl tamaño_letra" href="#">Conocimientos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="card" style="width: 18rem;">
+        <img src="img/fotomia_prueba.jpeg" class="card-img-top" alt="foto">
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+        </div>
+    </div>
+    <!-- Incluye los scripts de Bootstrap al final del cuerpo del documento -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
